--- a/index.html
+++ b/index.html
@@ -154,6 +154,27 @@
                         }, 18000);
                         }
             </script>
+            
+            <div id="container007">
+                <img id="img007" src="007b RachelKellyGamer.png" onclick="main007(this, '007.mp3');" />
+            </div>
+            <script type="text/javascript">
+                        function main007(el,soundfile)
+                        {
+                        document.getElementById("img007").style.animation="bounce .5s";
+                        document.getElementById("img007").src="007a RachelKellyGamer.png";
+                            if (el.mp3) {
+                            if(el.mp3.paused) el.mp3.play();
+                            else el.mp3.pause();
+                        } else {
+                            el.mp3 = new Audio(soundfile);
+                            el.mp3.play();
+                        }
+                        setTimeout(function() {
+                        document.getElementById("img007").src="007b RachelKellyGamer.png";
+                        }, 26000);
+                        }
+            </script>
 
             <div id="container000" class="noclickee">
                 <img src="000 ONE_shot_GURL.png" />
